# RobotTelemetryCollectionSystem

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
Project/: BlockDiagram.drawio  ClassDiagram.gaphor  DataModel.drawio  GoalsTree.drawio  Secondlevel1.drawio  Secondlevel2.drawio  Sequence.drawio
RobotTelemetryCollectorFakeClients/: GetRobotInfo.bru  GetRobots.bru  Post Telemetry.bru  battery_info.bru  bruno.json  movement_info.bru  receive telemetry.bru
client_frontend/: .env  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
client_frontend/public/: about.scss  home_page.css  home_page.scss  main.scss  styles.scss
client_frontend/src/: env.rs  lib.rs  main.rs  state.rs
client_frontend/src/app_model/: mod.rs
client_frontend/src/components/: mock_gallery.rs  mod.rs  select_info.rs
client_frontend/src/components/visualizer/: mod.rs
client_frontend/src/fetcher/: mod.rs
client_frontend/src/pages/: about.rs  home.rs  mod.rs  test_gallery.rs
client_frontend/src/pages/visualizer/: battery.rs  info_table.rs  live_toggle.rs  mod.rs  select_info.rs  sidebar.rs
fake_robot/: Cargo.toml
frontend/: Cargo.toml  README.md  index.html
frontend/public/: home_page.css
frontend/src/: app.rs  home_page.rs  lib.rs  main.rs
frontend/src/robot_map/: mod.rs
frontend/src/visualizer/: mod.rs
frontend/style/: main.scss
robot_data/: Cargo.toml
robot_data/src/: geodata.rs  lib.rs  robot_info.rs
robot_data/src/telemetry/: RobotInfo.rs  mod.rs
server/: Cargo.toml  RobotTelemetry.db  RobotTelemetry.duckdb
server/src/: lib.rs  main.rs  receiver.rs  sender.rs
server/src/database/: dao.rs  fetch.rs  mod.rs  to_db.rs
