
[package]
name = "client_frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
charming = { version = "0.6.0", features = ["wasm"] }
leptos-use = "0.17"
robot_data = {path = "../robot_data"}
reqwest = { version = "0.13", features = ["json"] }
reactive_stores = "0.3.1"
tabled = "0.20.0"




# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

# This line needs to come before anything else in Cargo.toml



