[package]
name = "robot_data"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228",features = ["std","serde_derive","rc"] }
chrono = {  version = "0.4.42", features = ["default","serde"] }
serde_json = "1.0.149"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
